[gd_scene load_steps=2 format=3 uid="uid://pysrlfu6jaiw"]

[ext_resource type="Script" path="res://Scenes/Weapons/ShotGun.gd" id="1_nmkw2"]

[node name="ShotGun" type="Area2D"]
script = ExtResource("1_nmkw2")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
